// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolbar utils getOverflowMenuItems return items 1`] = `
Array [
  <ToolbarMenuItemRenderer
    item={
      Object {
        "ianApp": true,
        "rank": 1,
        "tooltip": "Station Description",
        "type": "LabelValue",
        "value": "value",
        "widthPx": 400,
      }
    }
    menuKey="1"
  />,
  <ToolbarMenuItemRenderer
    item={
      Object {
        "ianApp": true,
        "label": "Description",
        "rank": 2,
        "tooltip": "Station Description",
        "type": "LabelValue",
        "value": "value",
        "widthPx": 400,
      }
    }
    menuKey="Description"
  />,
  <ToolbarMenuItemRenderer
    item={
      Object {
        "ianApp": true,
        "rank": 3,
        "tooltip": "Station Description",
        "type": "LabelValue",
        "value": "value",
        "widthPx": 400,
      }
    }
    menuKey="3"
  />,
  <ToolbarMenuItemRenderer
    item={
      Object {
        "ianApp": true,
        "label": "Description",
        "rank": 4,
        "tooltip": "Station Description",
        "type": "LabelValue",
        "value": "value",
        "widthPx": 400,
      }
    }
    menuKey="Description"
  />,
]
`;

exports[`Toolbar utils renderItem renders item 1`] = `
<ToolbarItemRenderer
  addToPopoverMap={[Function]}
  hasIssue={false}
  item={
    Object {
      "ianApp": true,
      "label": "Description",
      "rank": 1,
      "tooltip": "Station Description",
      "type": "LabelValue",
      "value": "value",
      "widthPx": 400,
    }
  }
/>
`;

exports[`Toolbar utils renderMenuItem renders item 1`] = `
<ToolbarMenuItemRenderer
  hasIssue={false}
  item={
    Object {
      "ianApp": true,
      "label": "Description",
      "rank": 1,
      "tooltip": "Station Description",
      "type": "LabelValue",
      "value": "value",
      "widthPx": 400,
    }
  }
  menuKey="menuKey"
/>
`;
